# gflags

./: .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  ChangeLog  ChangeLog.txt  INSTALL  INSTALL.md  INSTALL.txt  MODULE.bazel  Makefile.am  Makefile.in  NEWS  NEWS.txt  README  README.md  README.txt  README_windows.txt  RELEASE.md  WORKSPACE  aclocal.m4  appveyor.yml  autogen.sh  configure  configure.ac  gflags-vs2003.sln  gflags-vs2010.sln  gflags-vs2012.sln  gflags-vs2013.sln  gflags_unittest_main.cc  index.html
.github/workflows/: test.yml
bazel/: gflags.bzl
bazel/expanded_template/: expand_template.cc
cmake/: CMakeCXXInformation.cmake  CheckCXXLibraryExists.cmake  CheckTypeSize.cmake  FindThreadsCXX.cmake  FindThreadsCxx.cmake  config.cmake.in  package.cmake.in  utils.cmake  version.cmake.in
contrib/: gflags2man.py
contrib/coapp/: BuildAndWriteNugetPackage.ps1  gflags.autopkg
doc/: designstyle.css  gflags.html  index.html
include/gflags/: gflags.h.in
m4/: acx_pthread.m4
nuget/: BuildAndWriteNugetPackage.ps1  README.md  TargetCopySharedLibs.cmake  gflags-config.cmake  gflags.autopkg
python/: gflags.py  gflags2man.py  gflags_unittest.py  setup.py
src/: completions.cc  config.h  config.h.in  defines.h.in  gflags.cc  gflags.h  gflags.h.in  gflags_completions.cc  gflags_completions.h.in  gflags_completions.sh  gflags_config.h.in  gflags_declare.h.in  gflags_nc.cc  gflags_ns.h.in  gflags_reporting.cc  gflags_strip_flags_test.sh  gflags_unittest.cc  gflags_unittest.sh  mutex.h  util.h  windows_port.cc  windows_port.h
src/gflags/: gflags.h.in  gflags_completions.h.in  gflags_declare.h.in
src/google/: gflags.h.in
src/windows/: port.cc  port.h
src/windows/gflags/: gflags.h  gflags_completions.h  gflags_declare.h
test/: CMakeLists.txt  gflags_declare_flags.cc  gflags_nc.py.in  gflags_unittest.cc
test/cmake/: CMakeLists.txt  package_version.cmake  version_numbers.cmake
test/config/: CMakeLists.txt  main.cc
test/nc/: CMakeLists.txt  gflags_nc.cc
vsprojects/gflags_unittest/: gflags_unittest-vs2010.vcxproj  gflags_unittest-vs2012.vcxproj  gflags_unittest-vs2013.vcxproj  gflags_unittest.vcproj
vsprojects/libgflags/: libgflags-vs2010.vcxproj  libgflags-vs2012.vcxproj  libgflags-vs2013.vcxproj  libgflags.vcproj
vsprojects/libgflags-static/: libgflags-static-vs2013.vcxproj
